<resources>
    <string name="app_name">AhmedBassiounyTest</string>

    <array name="gender">
        <item>Male</item>
        <item>Female</item>
    </array>

    <string name="create_account">Create Account</string>
    <string name="user_info">User Information</string>
    <string name="name">Name</string>
    <string name="job_title">Job Title</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="save">Save</string>
    <string name="have_account">have account ? search now</string>
    <string name="enter_user_id">Enter User ID</string>
    <string name="search">Search</string>
    <string name="saved_successfully">Saved Successfully</string>
    <string name="id">ID</string>

</resources>
